--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
-spring.datasource.hikari.poolName=springboot-user-management-master
+spring.datasource.hikari.poolName=emergency-backend
 management.endpoint.metrics.enabled=true
 management.endpoints.web.exposure.include=health,info,prometheus,metrics
 app.jwt.issuer=palyndrum
@@ -14,3 +14,8 @@ app.jwt.expiration-in-ms=3600000
 logging.level.org.springframework.security=off
 spring.jpa.show-sql=false
 
+#spring.datasource.url=jdbc:h2:mem:emergency
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
