--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,36 @@ management.endpoint.metrics.enabled=true
 management.endpoints.web.exposure.include=health,info,prometheus,metrics
 app.jwt.issuer=palyndrum
 app.jwt.secret=@j4dm&rYvzKTgkx6QWYt$JweMhY)aLRz
-app.jwt.expiration-in-ms=3600000
+app.jwt.expiration-in-ms=360000000
 logging.level.org.springframework.security=off
 spring.jpa.show-sql=false
 
-#spring.datasource.url=jdbc:h2:mem:emergency
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.mail.host=smtp.mailspons.com
+spring.mail.port=2525
+spring.mail.username=cc55a86f0c4b44189424
+spring.mail.password=c544bf8b9c1b44ca8f88cf8751707b98
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.
+
+mail.send.to=cc55a86f0c4b44189424@mailspons.com
+
+
+#spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ebs
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.username=postgres
+#spring.datasource.password=<hWF:w3PbZ
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.open-in-view=false
+#spring.datasource.hikari.poolName=emergency-backend
+#management.endpoint.metrics.enabled=true
+#management.endpoints.web.exposure.include=health,info,prometheus,metrics
+#app.jwt.issuer=palyndrum
+#app.jwt.secret=@j4dm&rYvzKTgkx6QWYt$JweMhY)aLRz
+#app.jwt.expiration-in-ms=3600000
+#logging.level.org.springframework.security=off
+#spring.jpa.show-sql=false
+
+wa.gateway.endpoint=https://panel.rapiwha.com/send_message.php?apikey=6BGPK1ZPD3SE2W5F5XMP&number=%s&text=%s
+googlemap.link=https://www.google.com/maps/search/?api=1&query={latitude}%2C{longitude}
