--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ management.endpoint.metrics.enabled=true
 management.endpoints.web.exposure.include=health,info,prometheus,metrics
 app.jwt.issuer=palyndrum
 app.jwt.secret=@j4dm&rYvzKTgkx6QWYt$JweMhY)aLRz
-app.jwt.expiration-in-ms=360000000
+app.jwt.expiration-in-ms=-1
 logging.level.org.springframework.security=off
 spring.jpa.show-sql=false
 
@@ -37,7 +37,7 @@ mail.send.to=cc55a86f0c4b44189424@mailspons.com
 #management.endpoints.web.exposure.include=health,info,prometheus,metrics
 #app.jwt.issuer=palyndrum
 #app.jwt.secret=@j4dm&rYvzKTgkx6QWYt$JweMhY)aLRz
-#app.jwt.expiration-in-ms=3600000
+#app.jwt.expiration-in-ms=-1
 #logging.level.org.springframework.security=off
 #spring.jpa.show-sql=false
 
